# test_pyqt6

./: README.md  pyproject.toml
